rm fixed header on mobiles

--- a/styles/grid-mobile.css
+++ b/styles/grid-mobile.css
@@ -1,8 +1,6 @@
 @media screen and (max-width: 800px) {
     header {
         width: 100%;
-        top: 0;
-        position: sticky;
     }
 
     main {
